fixed h2 in about id

--- a/index.html
+++ b/index.html
@@ -47,14 +47,16 @@
         <h2>Developer's work</h2>
         <div class="img-content">
             <a href="https://innovative-j.github.io/CSS-Responsive-Memo/">
-                <img src="assets/Screenshot 2024-03-13 230526.png" alt="website paged called CSS Memo" class="screenshots">
+                <img src="assets/Screenshot 2024-03-13 230526.png" alt="website paged called CSS Memo"
+                    class="screenshots">
             </a>
             <p class="Screenshot-text">This website link takes you to a CSS Memo, where you are able to recall snippets
                 of css that can be applied to your ver own page. </p>
         </div>
         <div class="img-content">
             <a href="https://innovative-j.github.io/Refactored-Horiseon-site/"><img
-                    src="assets/Screenshot 2024-03-14 165330.png" alt="A screen shot of a Horiseon website" class="screenshots"></a>
+                    src="assets/Screenshot 2024-03-14 165330.png" alt="A screen shot of a Horiseon website"
+                    class="screenshots"></a>
             <p class="Screenshot-text">This Screenshot takes you to practice website that has been refactored to </p>
         </div>
     </section>
